--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "scroll-hooks",
+  "name": "joey-park",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -34,5 +34,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "homepage": "https://Heenough93.github.io/joey-park",
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
