--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
+    "ag-grid-react": "^29.3.4",
+    "ag-grid-community": "^29.3.4",
+    "@mui/material": "^5.12.3",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
