--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ag-grid-community": "^29.3.4",
     "uuid": "^9.0.0",
     "@types/uuid": "^9.0.0",
+    "@tanstack/react-query": "^4.29.5",
     "@mui/material": "^5.12.3",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
