--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://Heenough93.github.io/joey-park",
+  "homepage": "https://joey-park.com",
   "devDependencies": {
     "gh-pages": "^5.0.0"
   }
