--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "@mui/material": "^5.12.3",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "leaflet": "^1.9.4",
+    "react-leaflet": "^4.2.1",
+    "@types/leaflet": "^1.9.8"
   },
   "scripts": {
     "start": "react-scripts start",
