--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "web-vitals": "^2.1.4",
     "leaflet": "^1.9.4",
     "react-leaflet": "^4.2.1",
-    "@types/leaflet": "^1.9.8"
+    "@types/leaflet": "^1.9.8",
+    "react-leaflet-cluster": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
