--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "leaflet": "^1.9.4",
     "react-leaflet": "^4.2.1",
     "@types/leaflet": "^1.9.8",
-    "react-leaflet-cluster": "^2.1.0"
+    "react-leaflet-cluster": "^2.1.0",
+    "react-router-dom": "^6.20.1"
   },
   "scripts": {
     "start": "react-scripts start",
