--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-leaflet": "^4.2.1",
     "@types/leaflet": "^1.9.8",
     "react-leaflet-cluster": "^2.1.0",
-    "react-router-dom": "^6.20.1"
+    "react-router-dom": "^6.20.1",
+    "zustand": "^4.4.7"
   },
   "scripts": {
     "start": "react-scripts start",
