--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "@types/leaflet": "^1.9.8",
     "react-leaflet-cluster": "^2.1.0",
     "react-router-dom": "^6.20.1",
-    "zustand": "^4.4.7"
+    "zustand": "^4.4.7",
+    "eslint": "^8.48.0"
   },
   "scripts": {
     "start": "react-scripts start",
